# remedi_plus

./: .gitignore  README.md  pyproject.toml
src/: .env  constants.py
src/app/: app.py
src/app/routes/: __init__.py  medicine.py  reminders.py  test.py
src/models/: __init__.py
src/static/styles/: Addreminder.css  Contactus.css  Delreminder.css  Error.css  Myreminders.css  Search.css  index.css
src/templates/: About.html  Addreminder.html  Contactus.html  Delreminder.html  Error.html  Myreminders.html  Search.html  index.html  test.html
